--- a/qr-generator-upi.html
+++ b/qr-generator-upi.html
@@ -282,8 +282,11 @@
     </div>
   </div>
   <div class="header-contact">
-    <i class="fas fa-envelope icon-envelope"></i>
-    <a href="mailto:contact@yourcompany.com"></a>
+    <!-- WhatsApp Chat Button -->
+<a href="https://wa.me/9748437602" class="whatsapp-button" target="_blank">
+  <img src="https://img.icons8.com/ios-filled/50/ffffff/whatsapp.png" alt="Chat on WhatsApp" />
+</a>
+
   </div>
 </header>
 
@@ -340,9 +343,9 @@
 <footer class="app-footer">
   <div class="social-icons">
     <a href="https://www.facebook.com/share/14DyjrZ1qHW/" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
-    <a href="#" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
-    <a href="#" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
-    <a href="#" aria-label="RSS Feed"><i class="fas fa-rss"></i></a>
+    <a href="https://youtube.com/@rearpe.services?si=qgB07TvXQPdnC6-R" aria-label="Toutube"><i class="fab fa-youtube"></i></a>
+    <a href="https://www.instagram.com/itz_arif_602?igsh=M2ZuMzE2NTF5anRi&utm_source=ig_contact_invite" aria-label="instagram"><i class="fab fa-instagram"></i></a>
+    <a href=""><i class="fa-brands fa-google-pay"></i></a>
   </div>
   <p class="footer-copyright">&copy; 2025 Arif Digital Services. All Rights Reserved.</p>
 </footer>
