--- a/qr-generator-upi.html
+++ b/qr-generator-upi.html
@@ -289,6 +289,10 @@
     <!-- Logo -->
 <div class="logo-container">
   <img src="Images/Chat WhatsApp Rounded Logo.png" alt="Whatsapp App Logo" title="Whatsapp">
+.logo {
+  width: 20px; /* Change this to your desired size */
+  height: auto;
+}
 </div>
     
     
