--- a/qr-generator-upi.html
+++ b/qr-generator-upi.html
@@ -290,7 +290,7 @@
 <div class="logo-container">
   <img src="Images/Chat WhatsApp Rounded Logo.png" alt="Whatsapp App Logo" title="Whatsapp">
 .logo {
-  width: 20px; /* Change this to your desired size */
+  width: 10px;
   height: auto;
 }
 </div>
