--- a/qr-generator-upi.html
+++ b/qr-generator-upi.html
@@ -289,6 +289,15 @@
     <!-- Logo -->
 <div class="logo-container">
   <img src="Images/Chat WhatsApp Rounded Logo.png" alt="Whatsapp App Logo" title="Whatsapp">
+
+ width: 10%;
+      max-width: 400px;
+      height: auto;
+    }
+
+
+
+
 </div>
     
     
