--- a/qr-generator-upi.html
+++ b/qr-generator-upi.html
@@ -290,7 +290,8 @@
 <div class="logo-container">
   <img src="Images/Chat WhatsApp Rounded Logo.png" alt="Whatsapp App Logo" title="Whatsapp">
 
- width: 10%;
+ .custom-img {
+      width: 10%;
       max-width: 400px;
       height: auto;
     }
