--- a/qr-generator-upi.html
+++ b/qr-generator-upi.html
@@ -290,12 +290,9 @@
 <div class="logo-container">
   <img src="Images/Chat WhatsApp Rounded Logo.png" alt="Whatsapp App Logo" title="Whatsapp">
 
- .custom-img {
-      width: 10%;
-      max-width: 400px;
-      height: auto;
-    }
 
+      margin-top: 10px;
+      font-size: 0.9em;
 
 
 
