--- a/qr-generator-upi.html
+++ b/qr-generator-upi.html
@@ -284,9 +284,7 @@
   <div class="header-contact">
     <!-- WhatsApp Chat Button -->
 <a href="https://wa.me/9748437602" class="whatsapp-button" target="_blank">
-</div>
-    
-    
+  <img src="https://img.icons8.com/ios-filled/50/ffffff/whatsapp.png" alt="Chat on WhatsApp" />
 </a>
 
   </div>
