--- a/qr-generator-upi.html
+++ b/qr-generator-upi.html
@@ -325,7 +325,7 @@
             <img src="Images/Paytm Rounded Logo.png" alt="Paytm App Logo" title="Paytm">
             <img src="Images/GPay Rounded Logo.png" alt="Google Pay App Logo" title="Google Pay">
             <img src="Images/PhonePe Rounded Logo.png" alt="PhonePe App Logo" title="PhonePe">
-            <img src="Images/Amazon Pay Rounded Logo.png" alt="Amazon Pay App Logo" title="Amazon Pay">
+            <img href="https://youtube.com/@rearpe.services?si=qgB07TvXQPdnC6-R" src="Images/Amazon Pay Rounded Logo.png" alt="Amazon Pay App Logo" title="Amazon Pay">
           </div>
           <div class="timestamp" id="qrTimestamp"></div>
           <div class="brand">Arif Digital Services</div>
