--- a/arif-id-card.html
+++ b/arif-id-card.html
@@ -117,7 +117,7 @@
     </div>
 
     <div class="profile">
-      <img src="your-photo-url.png" alt="Arif Goldar">
+      <img src="Photo For Id Card.jpg" alt="Photo For Id Card">
       <div class="verified">✅ Verified</div>
     </div>
 
