--- a/arif-id-card.html
+++ b/arif-id-card.html
@@ -117,7 +117,7 @@
     </div>
 
     <div class="profile">
-      <img src="https://ibb.co/zkr062f/Photo For Id Card.jpg" alt="Arif Goldar">
+      <img src="https://ibb.co/zkr062f/arif-photo.jpg" alt="Arif Goldar">
       <div class="verified">✅ Verified</div>
     </div>
 
