--- a/arif-id-card.html
+++ b/arif-id-card.html
@@ -117,7 +117,7 @@
     </div>
 
     <div class="profile">
-      <img src="https://ibb.co/zkr062f/arif-photo.jpg" alt="Arif Goldar">
+      <a href="https://ibb.co/zkr062f"><img src="https://i.ibb.co/FPKjHY7/Photo-For-Id-Card.jpg" alt="Photo-For-Id-Card" border="0" /></a>
       <div class="verified">✅ Verified</div>
     </div>
 
