--- a/arif-id-card.html
+++ b/arif-id-card.html
@@ -108,7 +108,7 @@
   <div class="id-card">
 
     <div class="logos">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/fc/Vaco_Logo.svg/512px-Vaco_Logo.svg.png" alt="Vaco Logo">
+      <a href="https://ibb.co/8DnDXVpD"><img src="https://i.ibb.co/svpvtrGv/vaco-and-googlepay.png" alt="vaco-and-googlepay" border="0" /></a>
     </div>
 
     <div class="header">
