--- a/arif-id-card.html
+++ b/arif-id-card.html
@@ -108,8 +108,9 @@
   <div class="id-card">
 
 <div class="logos">
-  <a href="https://ibb.co/8DnDXVpD"><img src="https://i.ibb.co/svpvtrGv/vaco-and-googlepay.png" alt="vaco-and-googlepay" border="0" /></a>
-</div>
+      <a href="https://ibb.co/gMBbR5qw"><img src="https://i.ibb.co/vxKCj7ym/vaco-logo.png" alt="vaco-logo" border="0" /></a>
+      <a href="https://ibb.co/VY3Ng21p"><img src="https://i.ibb.co/r2vtx4jf/google-pay.png" alt="google-pay" border="0" /></a>
+    </div>
 
     <div class="header">
       Vaco Binary Semantics, Business Development Leader
