--- a/arif-id-card.html
+++ b/arif-id-card.html
@@ -106,11 +106,12 @@
 <body>
 
   <div class="id-card">
-
-<div class="logos">
-      <a href="https://ibb.co/gMBbR5qw"><img src="https://i.ibb.co/vxKCj7ym/vaco-logo.png" alt="vaco-logo" border="0" /></a>
-      <a href="https://ibb.co/VY3Ng21p"><img src="https://i.ibb.co/r2vtx4jf/google-pay.png" alt="google-pay" border="0" /></a>
-    </div>
+ 
+<div class="qr-preview-section">
+      <div class="qr-box" id="qrBox">
+        <div class="qr-header">
+          <img src="Images/Vaco And Googlepay.png" alt="VACO LOGO">	
+        </div>
 
     <div class="header">
       Vaco Binary Semantics, Business Development Leader
