--- a/arif-id-card.html
+++ b/arif-id-card.html
@@ -110,7 +110,8 @@
 <div class="qr-preview-section">
       <div class="qr-box" id="qrBox">
         <div class="qr-header">
-          <img src="Images/Vaco And Googlepay.png" alt="VACO LOGO">	
+          <img src="Images/Vaco And Googlepay.png" alt="VACO LOGO">
+          <p>Scan & Pay Using Any UPI App</p>
         </div>
 
     <div class="header">
