--- a/index.html
+++ b/index.html
@@ -39,7 +39,10 @@
         </section>
     </main>
 
-    <!-p><a href="https://forms.gle/T31TnWsennKkV8YS8">Apply Now</a></p>
+    <!-- Footer Section -->
+    <footer class="footer">
+        Want To Become A Google Pay Agent?
+        <p><a href="https://forms.gle/T31TnWsennKkV8YS8">Apply Now</a></p>
         <div class="social-icons">
             <a href="https://play.google.com/store/apps/details?id=com.google.android.apps.nbu.paisa.merchant&hl=en_IN"><i class="fa-brands fa-google-pay"></i></a>
             <a href="https://maps.app.goo.gl/ddXk7RZqA4D6afXd8"><i class="fa-solid fa-location-dot"></i></a>
@@ -63,7 +66,4 @@
     </script>
 	
 	</body>
-</html>- Footer Section -->
-    <footer class="footer">
-        Want To Become A Google Pay Agent?
-        <
+</html>
