--- a/qr-generator-upi.html
+++ b/qr-generator-upi.html
@@ -10,46 +10,81 @@
     body {
       margin: 0;
       font-family: 'Segoe UI', sans-serif;
-      background: linear-gradient(135deg, #e0f7fa, #ffffff);
+      background: linear-gradient(-45deg, #0f2027, #203a43, #2c5364);
+      background-size: 600% 600%;
+      animation: gradientBG 15s ease infinite;
       display: flex;
       flex-direction: column;
       align-items: center;
       padding: 20px;
+      color: #e0f7fa;
     }
+
+    @keyframes gradientBG {
+      0% { background-position: 0% 50%; }
+      50% { background-position: 100% 50%; }
+      100% { background-position: 0% 50%; }
+    }
+
     .container {
-      background: white;
+      background: rgba(255, 255, 255, 0.05);
+      backdrop-filter: blur(10px);
       padding: 30px;
       border-radius: 20px;
-      box-shadow: 0 0 20px rgba(0,0,0,0.1);
+      box-shadow: 0 0 20px rgba(0, 255, 255, 0.2);
       max-width: 400px;
       width: 100%;
       text-align: center;
+      animation: fadeIn 1.5s ease-in-out;
     }
+
     .logo {
       width: 100px;
       margin-bottom: 15px;
+      animation: slideDown 1s ease-out;
     }
+
     input, button {
       width: 100%;
       padding: 12px;
       margin: 10px 0;
       font-size: 16px;
-      border: 2px solid #4caf50;
+      border: 2px solid #00ffc3;
       border-radius: 10px;
       outline: none;
+      transition: all 0.3s ease;
     }
+
+    input:focus, button:hover {
+      border-color: #00e6e6;
+      box-shadow: 0 0 10px #00e6e6;
+    }
+
     button {
-      background: #4caf50;
-      color: white;
+      background: #00ffc3;
+      color: #000;
       font-weight: bold;
       cursor: pointer;
     }
+
     canvas {
       margin-top: 20px;
       max-width: 100%;
+      animation: fadeIn 2s ease-in-out;
     }
+
     .actions button {
       margin: 5px 0;
+    }
+
+    @keyframes fadeIn {
+      from { opacity: 0; transform: scale(0.95); }
+      to { opacity: 1; transform: scale(1); }
+    }
+
+    @keyframes slideDown {
+      0% { opacity: 0; transform: translateY(-20px); }
+      100% { opacity: 1; transform: translateY(0); }
     }
   </style>
 </head>
