--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Agent Verification Portal | GPay Business</title>
+    <title>Agent Verification Portal | Arif Digital Services</title>
     <link rel="icon" type="image/png" href="images/gpayBlogo.png">
     <!-- Open Graph Meta Tags -->
     <meta property="og:title" content="Agent Verification Portal">
