--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="icon" type="image/png" href="images/gpayBlogo.png">
     <!-- Open Graph Meta Tags -->
     <meta property="og:title" content="Agent Verification Portal">
-    
+    <meta property="og:description" content="Arif Goldar">
     <meta property="og:image" content="images/gpayBlogo.png">
     <meta property="og:type" content="website">
 
@@ -41,10 +41,9 @@
 
     <!-- Footer Section -->
     <footer class="footer">
-        Want To Become A Google Pay Agent?
+        Want To Become A Agent?
         <p><a href="https://forms.gle/T31TnWsennKkV8YS8">Apply Now</a></p>
         <div class="social-icons">
-            <a href="https://play.google.com/store/apps/details?id=com.google.android.apps.nbu.paisa.merchant&hl=en_IN"><i class="fa-brands fa-google-pay"></i></a>
             <a href="https://maps.app.goo.gl/ddXk7RZqA4D6afXd8"><i class="fa-solid fa-location-dot"></i></a>
             <a href="qrverify.html"><i class="fa-solid fa-qrcode"></i></a>
             <a href="tel:+91 9748437602"><i class="fas fa-phone"></i></a>
