--- a/index.html
+++ b/index.html
@@ -63,6 +63,68 @@
       widget-id="aaa2se"
     >
     </script>
+
+
+
+
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Partner Banner</title>
+  <style>
+    body {
+      margin: 0;
+      background: #f4f4f4;
+    }
+
+    .partner-banner {
+      background-color: #000;
+      overflow: hidden;
+      white-space: nowrap;
+      padding: 15px 0;
+    }
+
+    .partner-slider {
+      display: inline-block;
+      animation: slide-left 20s linear infinite;
+    }
+
+    .partner-slider img {
+      height: 40px;
+      margin: 0 30px;
+      vertical-align: middle;
+      filter: grayscale(100%);
+      transition: filter 0.3s;
+    }
+
+    .partner-slider img:hover {
+      filter: grayscale(0%);
+    }
+
+    @keyframes slide-left {
+      0% { transform: translateX(0); }
+      100% { transform: translateX(-100%); }
+    }
+  </style>
+</head>
+<body>
+
+  <div class="partner-banner">
+    <div class="partner-slider">
+      <img src="https://via.placeholder.com/100x40?text=Google" alt="Google">
+      <img src="https://via.placeholder.com/100x40?text=Amazon" alt="Amazon">
+      <img src="https://via.placeholder.com/100x40?text=Apple" alt="Apple">
+      <img src="https://via.placeholder.com/100x40?text=Meta" alt="Meta">
+      <img src="https://via.placeholder.com/100x40?text=Netflix" alt="Netflix">
+      <!-- repeat images for continuous loop -->
+      <img src="https://via.placeholder.com/100x40?text=Google" alt="Google">
+      <img src="https://via.placeholder.com/100x40?text=Amazon" alt="Amazon">
+      <img src="https://via.placeholder.com/100x40?text=Apple" alt="Apple">
+      <img src="https://via.placeholder.com/100x40?text=Meta" alt="Meta">
+      <img src="https://via.placeholder.com/100x40?text=Netflix" alt="Netflix">
+    </div>
+  </div>
+
 	
 	</body>
 </html>
