--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
   <div class="partner-banner">
     <div class="partner-slider">
-      <img src="https://via.placeholder.com/100x40?text=Google" alt="Google">
+      <img src="Google-Pay.png" alt="Google">
       <img src="https://via.placeholder.com/100x40?text=Amazon" alt="Amazon">
       <img src="https://via.placeholder.com/100x40?text=Apple" alt="Apple">
       <img src="https://via.placeholder.com/100x40?text=Meta" alt="Meta">
