--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
 
   <div class="partner-banner">
     <div class="partner-slider">
-      <img src="Google-Pay.png" alt="Google">
+      <img src="Google Pay.png" alt="Google-Pay">
       <img src="https://via.placeholder.com/100x40?text=Amazon" alt="Amazon">
       <img src="https://via.placeholder.com/100x40?text=Apple" alt="Apple">
       <img src="https://via.placeholder.com/100x40?text=Meta" alt="Meta">
       <img src="https://via.placeholder.com/100x40?text=Netflix" alt="Netflix">
       <!-- repeat images for continuous loop -->
-      <img src="https://via.placeholder.com/100x40?text=Google" alt="Google">
+      <img src="Google Pay.png" alt="Google-Pay">
       <img src="https://via.placeholder.com/100x40?text=Amazon" alt="Amazon">
       <img src="https://via.placeholder.com/100x40?text=Apple" alt="Apple">
       <img src="https://via.placeholder.com/100x40?text=Meta" alt="Meta">
