--- a/index.html
+++ b/index.html
@@ -19,16 +19,16 @@
   <div class="partner-banner">
     <div class="partner-slider">
       <img src="images/Google Pay.png" alt="Google Pay">
-      <img src="https://via.placeholder.com/100x40?text=Amazon" alt="Amazon">
-      <img src="https://via.placeholder.com/100x40?text=Apple" alt="Apple">
-      <img src="https://via.placeholder.com/100x40?text=Meta" alt="Meta">
-      <img src="https://via.placeholder.com/100x40?text=Netflix" alt="Netflix">
+      <img src="images/Google Pay.png" alt="Amazon">
+      <img src="images/Google Pay.png" alt="Apple">
+      <img src="images/Google Pay.png" alt="Meta">
+      <img src="images/Google Pay.png" alt="Netflix">
       <!-- repeat images for continuous loop -->
       <img src="images/Google Pay.png" alt="Google Pay">
-      <img src="https://via.placeholder.com/100x40?text=Amazon" alt="Amazon">
-      <img src="https://via.placeholder.com/100x40?text=Apple" alt="Apple">
-      <img src="https://via.placeholder.com/100x40?text=Meta" alt="Meta">
-      <img src="https://via.placeholder.com/100x40?text=Netflix" alt="Netflix">
+      <img src="images/Google Pay.png" alt="Amazon">
+      <img src="images/Google Pay.png" alt="Apple">
+      <img src="images/Google Pay.png" alt="Meta">
+      <img src="images/Google Pay.png" alt="Netflix">
     </div>
   </div>
 
