--- a/index.html
+++ b/index.html
@@ -16,21 +16,88 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 
+
+
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Partner Banner</title>
+  <style>
+    body {
+      margin: 0;
+      background: #f4f4f4;
+      font-family: sans-serif;
+    }
+
+    .partner-banner {
+      background-color: #000;
+      overflow: hidden;
+      white-space: nowrap;
+      padding: 20px 0;
+    }
+
+    .partner-slider {
+      display: inline-block;
+      animation: slide-left 25s linear infinite;
+    }
+
+    .partner-slider img {
+      height: 50px;
+      margin: 0 40px;
+      vertical-align: middle;
+      transition: transform 0.3s ease;
+    }
+
+    .partner-slider img:hover {
+      transform: scale(1.1);
+    }
+
+    @keyframes slide-left {
+      0% { transform: translateX(0); }
+      100% { transform: translateX(-100%); }
+    }
+  </style>
+</head>
+<body>
+
   <div class="partner-banner">
     <div class="partner-slider">
-      <img src="images/Google Pay.png" alt="Google Pay">
-      <img src="images/Google Pay.png" alt="Amazon">
-      <img src="images/Google Pay.png" alt="Apple">
-      <img src="images/Google Pay.png" alt="Meta">
-      <img src="images/Google Pay.png" alt="Netflix">
-      <!-- repeat images for continuous loop -->
-      <img src="images/Google Pay.png" alt="Google Pay">
-      <img src="images/Google Pay.png" alt="Amazon">
-      <img src="images/Google Pay.png" alt="Apple">
-      <img src="images/Google Pay.png" alt="Meta">
-      <img src="images/Google Pay.png" alt="Netflix">
+      <!-- Logos with colorful images -->
+      <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/5e/Paytm_logo.png/320px-Paytm_logo.png" alt="Paytm">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f1/Google_Pay_Logo.svg/320px-Google_Pay_Logo.svg.png" alt="Google Pay">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/a/a9/Amazon_logo.svg" alt="Amazon">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/f/fa/Apple_logo_black.svg" alt="Apple">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/0/0c/Meta_Platforms_Inc._logo.svg" alt="Meta">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/6/69/Netflix_logo.svg" alt="Netflix">
+      
+      <!-- Repeat logos for seamless scroll -->
+      <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/5e/Paytm_logo.png/320px-Paytm_logo.png" alt="Paytm">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f1/Google_Pay_Logo.svg/320px-Google_Pay_Logo.svg.png" alt="Google Pay">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/a/a9/Amazon_logo.svg" alt="Amazon">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/f/fa/Apple_logo_black.svg" alt="Apple">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/0/0c/Meta_Platforms_Inc._logo.svg" alt="Meta">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/6/69/Netflix_logo.svg" alt="Netflix">
     </div>
   </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 <body>
     <!-- Hero Section -->
