--- a/index.html
+++ b/index.html
@@ -56,19 +56,43 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Partner Banner</title>
+  <title>Partner Banner - Purple Glow</title>
   <style>
     body {
       margin: 0;
-      background: #f4f4f4;
+      background: #2e003e; /* Deep violet background */
       font-family: sans-serif;
     }
 
     .partner-banner {
-      background-color: #000;
+      position: relative;
       overflow: hidden;
       white-space: nowrap;
       padding: 20px 0;
+      z-index: 1;
+      background: #4b0082; /* Indigo/Violet banner color */
+    }
+
+    /* Glowing animated background */
+    .partner-banner::before {
+      content: '';
+      position: absolute;
+      top: 0;
+      left: -50%;
+      width: 200%;
+      height: 100%;
+      background: linear-gradient(120deg, #a020f0, #da70d6, #8a2be2, #a020f0);
+      background-size: 400% 400%;
+      animation: glowAnimation 12s ease infinite;
+      filter: blur(60px);
+      z-index: -1;
+      opacity: 0.5;
+    }
+
+    @keyframes glowAnimation {
+      0% { background-position: 0% 50%; }
+      50% { background-position: 100% 50%; }
+      100% { background-position: 0% 50%; }
     }
 
     .partner-slider {
@@ -97,7 +121,7 @@
 
   <div class="partner-banner">
     <div class="partner-slider">
-      <!-- Logos with colorful images -->
+      <!-- Partner logos -->
       <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/5e/Paytm_logo.png/320px-Paytm_logo.png" alt="Paytm">
       <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f1/Google_Pay_Logo.svg/320px-Google_Pay_Logo.svg.png" alt="Google Pay">
       <img src="https://upload.wikimedia.org/wikipedia/commons/a/a9/Amazon_logo.svg" alt="Amazon">
@@ -105,7 +129,7 @@
       <img src="https://upload.wikimedia.org/wikipedia/commons/0/0c/Meta_Platforms_Inc._logo.svg" alt="Meta">
       <img src="https://upload.wikimedia.org/wikipedia/commons/6/69/Netflix_logo.svg" alt="Netflix">
       
-      <!-- Repeat logos for seamless scroll -->
+      <!-- Repeat logos for smooth scroll -->
       <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/5e/Paytm_logo.png/320px-Paytm_logo.png" alt="Paytm">
       <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f1/Google_Pay_Logo.svg/320px-Google_Pay_Logo.svg.png" alt="Google Pay">
       <img src="https://upload.wikimedia.org/wikipedia/commons/a/a9/Amazon_logo.svg" alt="Amazon">
@@ -114,6 +138,7 @@
       <img src="https://upload.wikimedia.org/wikipedia/commons/6/69/Netflix_logo.svg" alt="Netflix">
     </div>
   </div>
+
 
 
 
