--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
       white-space: nowrap;
       padding: 20px 0;
       z-index: 1;
-      background: #4b0082; /* Indigo/Violet banner color */
+      background: red/* Indigo/Violet banner color */
     }
 
     /* Glowing animated background */
