--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Partner Banner - Purple Glow</title>
+  <title>Partner Banner - White Background</title>
   <style>
     body {
       margin: 0;
-      background: red/* Deep violet background */
+      background: #ffffff; /* Pure white background */
       font-family: sans-serif;
     }
 
@@ -70,10 +70,10 @@
       white-space: nowrap;
       padding: 20px 0;
       z-index: 1;
-      background: whait /* Indigo/Violet banner color */
+      background: #ffffff; /* White banner */
     }
 
-    /* Glowing animated background */
+    /* Soft violet glow over white */
     .partner-banner::before {
       content: '';
       position: absolute;
@@ -81,12 +81,12 @@
       left: -50%;
       width: 200%;
       height: 100%;
-      background: linear-gradient(120deg, #a020f0, #da70d6, #8a2be2, #a020f0);
+      background: linear-gradient(120deg, #e0b3ff, #f0e6ff, #e0b3ff);
       background-size: 400% 400%;
       animation: glowAnimation 12s ease infinite;
-      filter: blur(60px);
+      filter: blur(40px);
       z-index: -1;
-      opacity: 0.5;
+      opacity: 0.3;
     }
 
     @keyframes glowAnimation {
@@ -128,8 +128,8 @@
       <img src="https://upload.wikimedia.org/wikipedia/commons/f/fa/Apple_logo_black.svg" alt="Apple">
       <img src="https://upload.wikimedia.org/wikipedia/commons/0/0c/Meta_Platforms_Inc._logo.svg" alt="Meta">
       <img src="https://upload.wikimedia.org/wikipedia/commons/6/69/Netflix_logo.svg" alt="Netflix">
-      
-      <!-- Repeat logos for smooth scroll -->
+
+      <!-- Repeat logos for seamless loop -->
       <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/5e/Paytm_logo.png/320px-Paytm_logo.png" alt="Paytm">
       <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f1/Google_Pay_Logo.svg/320px-Google_Pay_Logo.svg.png" alt="Google Pay">
       <img src="https://upload.wikimedia.org/wikipedia/commons/a/a9/Amazon_logo.svg" alt="Amazon">
