--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
 </head>
 
 
-<html lang="en">
+<<html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Partner Banner - White Background</title>
+  <title>Partner Banner - White Background Fixed</title>
   <style>
     body {
       margin: 0;
-      background: #ffffff; /* Pure white background */
+      background: #ffffff !important; /* Force white background */
       font-family: sans-serif;
     }
 
@@ -34,10 +34,10 @@
       white-space: nowrap;
       padding: 20px 0;
       z-index: 1;
-      background: #ffffff; /* White banner */
+      background: #ffffff !important; /* Force white banner */
     }
 
-    /* Soft violet glow over white */
+    /* Glowing animated background - fixed for white compatibility */
     .partner-banner::before {
       content: '';
       position: absolute;
@@ -48,9 +48,10 @@
       background: linear-gradient(120deg, #e0b3ff, #f0e6ff, #e0b3ff);
       background-size: 400% 400%;
       animation: glowAnimation 12s ease infinite;
-      filter: blur(40px);
+      filter: blur(30px);
       z-index: -1;
       opacity: 0.3;
+      pointer-events: none;
     }
 
     @keyframes glowAnimation {
@@ -93,7 +94,7 @@
       <img src="https://upload.wikimedia.org/wikipedia/commons/0/0c/Meta_Platforms_Inc._logo.svg" alt="Meta">
       <img src="https://upload.wikimedia.org/wikipedia/commons/6/69/Netflix_logo.svg" alt="Netflix">
 
-      <!-- Repeat logos for seamless loop -->
+      <!-- Repeat for smooth loop -->
       <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/5e/Paytm_logo.png/320px-Paytm_logo.png" alt="Paytm">
       <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f1/Google_Pay_Logo.svg/320px-Google_Pay_Logo.svg.png" alt="Google Pay">
       <img src="https://upload.wikimedia.org/wikipedia/commons/a/a9/Amazon_logo.svg" alt="Amazon">
