--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Agent Verification Portal | Arif Digital Services</title>
+    <title>Agent Verification Portal | GPay Business</title>
     <link rel="icon" type="image/png" href="images/gpayBlogo.png">
     <!-- Open Graph Meta Tags -->
     <meta property="og:title" content="Agent Verification Portal">
-    <meta property="og:description" content="Arif Goldar">
+    <meta property="og:description" content="GPay Business">
     <meta property="og:image" content="images/gpayBlogo.png">
     <meta property="og:type" content="website">
 
@@ -15,8 +15,6 @@
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
-
-
 
 <body>
     <!-- Hero Section -->
@@ -40,11 +38,13 @@
             <img id="agentImage" alt="Agent ID Card" class="responsive-image" src="./bdl-arifgoldar-google-pay.png">
         </section>
     </main>
+
     <!-- Footer Section -->
     <footer class="footer">
-        Want To Become A Agent?
+        Want To Become A Google Pay Agent?
         <p><a href="https://forms.gle/T31TnWsennKkV8YS8">Apply Now</a></p>
         <div class="social-icons">
+            <a href="https://play.google.com/store/apps/details?id=com.google.android.apps.nbu.paisa.merchant&hl=en_IN"><i class="fa-brands fa-google-pay"></i></a>
             <a href="https://maps.app.goo.gl/ddXk7RZqA4D6afXd8"><i class="fa-solid fa-location-dot"></i></a>
             <a href="qrverify.html"><i class="fa-solid fa-qrcode"></i></a>
             <a href="tel:+91 9748437602"><i class="fas fa-phone"></i></a>
@@ -53,48 +53,6 @@
 
     <!-- JavaScript -->
     <script src="js/script.js"></script>
-
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Partner Banner</title>
-  <style>
-    body {
-      margin: 0;
-      background: #f4f4f4;
-    }
-
-    .partner-banner {
-      background-color: #000;
-      overflow: hidden;
-      white-space: nowrap;
-      padding: 15px 0;
-    }
-
-    .partner-slider {
-      display: inline-block;
-      animation: slide-left 20s linear infinite;
-    }
-
-    .partner-slider img {
-      height: 40px;
-      margin: 0 30px;
-      vertical-align: middle;
-      filter: grayscale(100%);
-      transition: filter 0.3s;
-    }
-
-    .partner-slider img:hover {
-      filter: grayscale(0%);
-    }
-
-    @keyframes slide-left {
-      0% { transform: translateX(0); }
-      100% { transform: translateX(-100%); }
-    }
-  </style>
-</head>
-<body>
 	
 	</body>
 </html>
