--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <a href="https://maps.app.goo.gl/ddXk7RZqA4D6afXd8"><i class="fa-solid fa-location-dot"></i></a>
             <a href="qrverify.html"><i class="fa-solid fa-qrcode"></i></a>
             <a href="tel:+91 9748437602"><i class="fas fa-phone"></i></a>
-            <a href="https://wa.me/9748437602"><i class="whatsapp-button"></i></a>
+            <a href="https://wa.me/9748437602"><i class="fab fa-whatsapp"></i></a>
         </div>
     </footer>
 	
