--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Agent Verification Portal | Arif Digital Services</title>
+    <title>Agent Verification Portal | GPay Business</title>
     <link rel="icon" type="image/png" href="images/gpayBlogo.png">
     <!-- Open Graph Meta Tags -->
     <meta property="og:title" content="Agent Verification Portal">
-    <meta property="og:description" content="Job Vacancy">
-    <meta property="og:image" content="images/jobBlogo.png">
+    <meta property="og:description" content="GPay Business">
+    <meta property="og:image" content="images/gpayBlogo.png">
     <meta property="og:type" content="website">
 
     <!-- CSS -->
@@ -41,13 +41,13 @@
 
     <!-- Footer Section -->
     <footer class="footer">
-        Want To Become a Agent?
+        Want To Become A Google Pay Agent?
         <p><a href="https://forms.gle/T31TnWsennKkV8YS8">Apply Now</a></p>
         <div class="social-icons">
+            <a href="https://play.google.com/store/apps/details?id=com.google.android.apps.nbu.paisa.merchant&hl=en_IN"><i class="fa-brands fa-google-pay"></i></a>
             <a href="https://maps.app.goo.gl/ddXk7RZqA4D6afXd8"><i class="fa-solid fa-location-dot"></i></a>
             <a href="qrverify.html"><i class="fa-solid fa-qrcode"></i></a>
             <a href="tel:+91 9748437602"><i class="fas fa-phone"></i></a>
-            <a href="https://wa.me/9748437602"><i class="fab fa-whatsapp"></i></a>
         </div>
     </footer>
 	
