--- a/index.html
+++ b/index.html
@@ -50,6 +50,10 @@
             <a href="tel:+91 9748437602"><i class="fas fa-phone"></i></a>
         </div>
     </footer>
+
+    <!-- JavaScript -->
+    <script src="js/script.js"></script>
+
 	
 	</body>
 </html>
