--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Agent Verification Portal | GPay Business</title>
+    <title>Agent Verification Portal | R&N Services</title>
     <link rel="icon" type="image/png" href="images/gpayBlogo.png">
     <!-- Open Graph Meta Tags -->
     <meta property="og:title" content="Agent Verification Portal">
-    <meta property="og:description" content="GPay Business">
+    <meta property="og:description" content="Job Vacancy">
     <meta property="og:image" content="images/gpayBlogo.png">
     <meta property="og:type" content="website">
 
@@ -41,7 +41,7 @@
 
     <!-- Footer Section -->
     <footer class="footer">
-        Want To Become A Google Pay Agent?
+        Want To Become a Agent?
         <p><a href="https://forms.gle/T31TnWsennKkV8YS8">Apply Now</a></p>
         <div class="social-icons">
             <a href="https://maps.app.goo.gl/ddXk7RZqA4D6afXd8"><i class="fa-solid fa-location-dot"></i></a>
