--- a/index.html
+++ b/index.html
@@ -1,187 +1,149 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Agent Verification Portal | R&N Services</title>
-  <link rel="icon" type="image/png" href="images/gpayBlogo.png">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Agent Verification Portal | R&N Services</title>
+    <link rel="icon" type="image/png" href="images/gpayBlogo.png">
+    <!-- Open Graph Meta Tags -->
+    <meta property="og:title" content="Agent Verification Portal">
+    <meta property="og:description" content="Job Vacancy">
+    <meta property="og:image" content="images/gpayBlogo.png">
+    <meta property="og:type" content="website">
 
-  <!-- Open Graph Meta Tags -->
-  <meta property="og:title" content="Agent Verification Portal">
-  <meta property="og:description" content="Job Vacancy">
-  <meta property="og:image" content="images/gpayBlogo.png">
-  <meta property="og:type" content="website">
-
-  <!-- Font Awesome CDN -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-
-  <!-- Internal Premium CSS -->
-  <style>
-    body {
-      margin: 0;
-      background-color: #0f0f0f;
-      font-family: 'Segoe UI', sans-serif;
-      animation: fadeInBody 1s ease-in;
-      color: white;
-    }
-
-    @keyframes fadeInBody {
-      from { opacity: 0; }
-      to { opacity: 1; }
-    }
-
-    .hero {
-      padding: 100px 20px 60px;
-      text-align: center;
-      background: linear-gradient(to right, #1a1a1a, #000);
-    }
-
-    .hero-text h1 {
-      font-size: 48px;
-      font-weight: 700;
-      background: linear-gradient(90deg, #6e00ff, #00d4ff);
-      -webkit-background-clip: text;
-      -webkit-text-fill-color: transparent;
-      animation: fadeZoom 1.5s ease-out;
-    }
-
-    @keyframes fadeZoom {
-      0% { opacity: 0; transform: scale(0.9); }
-      100% { opacity: 1; transform: scale(1); }
-    }
-
-    .hero-text p {
-      font-size: 18px;
-      margin-top: 10px;
-      opacity: 0.8;
-    }
-
-    .search-container {
-      margin-top: 25px;
-    }
-
-    .search-input {
-      padding: 12px 18px;
-      width: 240px;
-      border-radius: 8px;
-      border: none;
-      font-size: 16px;
-    }
-
-    .search-btn, .clear-btn {
-      background: rgba(255, 255, 255, 0.08);
-      border: 1px solid rgba(255,255,255,0.2);
-      color: white;
-      padding: 12px 16px;
-      border-radius: 10px;
-      margin-left: 8px;
-      cursor: pointer;
-      transition: 0.3s;
-    }
-
-    .search-btn:hover, .clear-btn:hover {
-      background-color: rgba(255,255,255,0.2);
-    }
-
-    .intro {
-      text-align: center;
-      padding: 40px 20px;
-    }
-
-    .intro h2 {
-      font-size: 28px;
-      color: #00d4ff;
-    }
-
-    .responsive-image {
-      max-width: 90%;
-      height: auto;
-      margin-top: 20px;
-      border-radius: 8px;
-      box-shadow: 0 0 12px rgba(0, 212, 255, 0.3);
-    }
-
-    .footer {
-      background-color: #111;
-      text-align: center;
-      padding: 30px 10px;
-      font-size: 16px;
-      color: #ccc;
-    }
-
-    .footer a {
-      color: #00d4ff;
-      text-decoration: none;
-    }
-
-    .social-icons {
-      margin-top: 15px;
-    }
-
-    .social-icons a {
-      margin: 0 10px;
-      color: white;
-      font-size: 24px;
-      transition: 0.3s;
-    }
-
-    .social-icons a:hover {
-      color: #00d4ff;
-      transform: scale(1.2);
-    }
-
-    .loading-spinner {
-      width: 40px;
-      height: 40px;
-      border: 4px solid rgba(255,255,255,0.3);
-      border-top: 4px solid #00d4ff;
-      border-radius: 50%;
-      margin: 20px auto;
-      animation: spin 1s linear infinite;
-    }
-
-    @keyframes spin {
-      to { transform: rotate(360deg); }
-    }
-  </style>
+    <!-- CSS -->
+    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 
 <body>
-  <!-- Hero Section -->
-  <section class="hero">
-    <div class="hero-text">
-      <h1>Employee Verification Portal</h1>
-      <p>Verify Agent details seamlessly and securely.</p>
-      <div class="search-container">
-        <input type="text" id="agentSearch" placeholder="Enter Agent Code" class="search-input">
-        <button id="searchBtn" class="search-btn">Search</button>
-        <button id="clearBtn" class="clear-btn" title="Clear Search"><i class="fas fa-times"></i></button>
-      </div>
-    </div>
-  </section>
-
-  <!-- Main Content -->
-  <main>
-    <section class="intro">
-      <h2>Agent ID Card</h2>
-      <div id="loading" class="loading-spinner" style="display: none;"></div>
-      <img id="agentImage" alt="Agent ID Card" class="responsive-image" src="./bdl-arifgoldar-google-pay.png">
+    <!-- Hero Section -->
+    <section class="hero">
+        <div class="hero-text">
+            <h1>Employee Verification Portal</h1>
+            <p>Verify Agent details seamlessly and securely.</p>
+            <div class="search-container">
+                <input type="text" id="agentSearch" placeholder="Enter Agent Code" class="search-input">
+                <button id="searchBtn" class="search-btn">Search</button>
+                <button id="clearBtn" class="clear-btn" title="Clear Search"><i class="fas fa-times"></i></button>
+            </div>
+        </div>
     </section>
-  </main>
 
-  <!-- Footer Section -->
-  <footer class="footer">
-    Want To Become a Agent?
-    <p><a href="https://forms.gle/T31TnWsennKkV8YS8">Apply Now</a></p>
-    <div class="social-icons">
-      <a href="https://maps.app.goo.gl/ddXk7RZqA4D6afXd8"><i class="fa-solid fa-location-dot"></i></a>
-      <a href="qrverify.html"><i class="fa-solid fa-qrcode"></i></a>
-      <a href="tel:+919748437602"><i class="fas fa-phone"></i></a>
-      <a href="https://wa.me/919748437602"><i class="fab fa-whatsapp"></i></a>
-    </div>
-  </footer>
+    <!-- Main Content -->
+    <main>
+        <section class="intro">
+            <h2>Agent ID Card</h2>
+            <div id="loading" class="loading-spinner" style="display: none;"></div>
+            <img id="agentImage" alt="Agent ID Card" class="responsive-image" src="./bdl-arifgoldar-google-pay.png">
+        </section>
+    </main>
 
-  <!-- JavaScript -->
-  <script src="js/script.js"></script>
-</body>
+    <!-- Footer Section -->
+    <footer class="footer">
+        Want To Become a Agent?
+        <p><a href="https://forms.gle/T31TnWsennKkV8YS8">Apply Now</a></p>
+        <div class="social-icons">
+            <a href="https://maps.app.goo.gl/ddXk7RZqA4D6afXd8"><i class="fa-solid fa-location-dot"></i></a>
+            <a href="qrverify.html"><i class="fa-solid fa-qrcode"></i></a>
+            <a href="tel:+91 9748437602"><i class="fas fa-phone"></i></a>
+            <a href="https://wa.me/919748437602"><i class="fab fa-whatsapp"></i></a>
+        </div>
+    </footer>
+
+    <!-- JavaScript -->
+    <script src="js/script.js"></script>
+
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Glowing Search Box</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- Font Awesome -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+
+  <style>
+    body {
+      margin: 0;
+      background: #000;
+      height: 100vh;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      font-family: 'Segoe UI', sans-serif;
+    }
+
+    .search-container {
+      background: #111;
+      padding: 15px 20px;
+      border-radius: 15px;
+      display: flex;
+      gap: 10px;
+      box-shadow: 0 0 20px rgba(0, 255, 255, 0.1);
+    }
+
+    .search-input {
+      padding: 14px 20px;
+      width: 260px;
+      border: 2px solid transparent;
+      border-radius: 10px;
+      background: #000;
+      color: #fff;
+      font-size: 16px;
+      outline: none;
+      transition: 0.4s;
+      box-shadow: 0 0 10px #00fff2, 0 0 20px #00fff2;
+    }
+
+    .search-input:focus {
+      border-color: #00fff2;
+      box-shadow: 0 0 12px #00fff2, 0 0 25px #00fff2;
+    }
+
+    .search-btn, .clear-btn {
+      padding: 14px 18px;
+      border: none;
+      border-radius: 10px;
+      cursor: pointer;
+      font-weight: bold;
+      font-size: 15px;
+      color: #000;
+      background: linear-gradient(135deg, #00fff2, #00d4ff);
+      box-shadow: 0 0 15px #00fff2;
+      transition: all 0.3s ease-in-out;
+    }
+
+    .search-btn:hover, .clear-btn:hover {
+      transform: scale(1.05);
+      box-shadow: 0 0 20px #00fff2, 0 0 30px #00d4ff;
+    }
+
+    .clear-btn i {
+      color: #000;
+    }
+  </style>
+</head>
+<body>
+
+  <div class="search-container">
+    <input type="text" id="searchInput" class="search-input" placeholder="Enter Agent Code">
+    <button class="search-btn" onclick="searchAgent()">Search</button>
+    <button class="clear-btn" onclick="clearInput()" title="Clear">
+      <i class="fas fa-times"></i>
+    </button>
+  </div>
+
+  <script>
+    function searchAgent() {
+      const input = document.getElementById("searchInput").value;
+      alert("Searching for: " + input); // replace this with your actual logic
+    }
+
+    function clearInput() {
+      document.getElementById("searchInput").value = "";
+    }
+  </script>
+
+	
+	</body>
 </html>
