--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <!-- Hero Section -->
     <section class="hero">
         <div class="hero-text">
-            <h1>Employee Verification Portal</h1>
+            <h1>Agent Verification Portal</h1>
             <p>Verify Agent details seamlessly and securely.</p>
             <div class="search-container">
                 <input type="text" id="agentSearch" placeholder="Enter Agent Code" class="search-input">
